testing layout for overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    width: 100%;
+}
 /*----------------------------------Header */
 
 .header {
@@ -33,7 +43,7 @@
     font-family:'Montserrat', sans-serif;
     color: #3f312e;
     font-weight: 400;
-    padding-inline: 5px;
+    padding: 5px;
 }
 .nav-link :hover {
     color: #4ab296;
@@ -46,6 +56,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 400px;
+    width: 100%;
     padding: 0px;
 }
 .skills-image {
